--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -14,6 +14,19 @@ body {
 $click: #1e70cd;
 
 //constants
+.sidebar_menu {
+  padding: 0.25rem 0.75rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  background-color: transparent;
+  border-radius: 0.25rem;
+  color: rgba(0, 0, 0, 0.55);
+  border-color: rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.15s ease-in-out;
+}
+.sidebar_menu:focus {
+  outline: none;
+}
 .spec {
   padding-top: 0.7rem;
 }
@@ -864,6 +877,19 @@ hr {
   .login-form {
     width: 90%;
   }
+  .datepicker-control {
+    display: block;
+  }
+  .layout-expanded .layout-sidenav {
+    -webkit-transform: translateZ(0) !important;
+    transform: translateZ(0) !important;
+  }
+  .layout-sidenav {
+    z-index: 1100;
+  }
+  .sidenav-vertical {
+    transition: 0.2s;
+  }
   .layout-sidenav {
     position: fixed !important;
     top: 0 !important;
@@ -875,8 +901,19 @@ hr {
     transform: translate3d(-100%, 0, 0);
     will-change: transform, -webkit-transform;
   }
-  .datepicker-control {
-    display: block;
+  .layout-overlay {
+    z-index: 1099;
+  }
+  .layout-overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100% !important;
+    left: 0;
+    display: none;
+    background: #181c21;
+    opacity: 0.5;
+    cursor: pointer;
   }
 }
 
