--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,6 +25,10 @@ body {
   outline: none;
 }
 
+.modal .modal-body {
+  font-size: 0.894rem !important;
+}
+
 .toggle_menu {
   color: #000;
   background-color: transparent;
@@ -33,6 +37,15 @@ body {
 
 .toggle_menu:hover {
   color: #9d9fa1;
+}
+
+.mr-2 {
+  margin-right: 0.5rem !important;
+}
+
+.mr-1,
+.mx-1 {
+  margin-right: 0.25rem !important;
 }
 
 .ps {
@@ -722,6 +735,112 @@ h4 {
   width: 100%;
 }
 
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select,
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .w-checkbox-select {
+  width: 100%;
+  position: relative;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select.open .select-input,
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .w-checkbox-select.open .select-input {
+  border-bottom: none;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select.open .select-dropdown,
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .w-checkbox-select.open .select-dropdown {
+  display: block;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select .select-input,
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .w-checkbox-select .select-input {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 2.5rem;
+  padding: 0.2rem 0.5rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select .select-input .checked-inline-options,
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .w-checkbox-select .select-input .checked-inline-options {
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  width: 100%;
+  list-style: none;
+  padding: 0 0.375rem 0.375rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select .select-input .checked-item,
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .w-checkbox-select .select-input .checked-item {
+  background-color: rgba(24, 28, 33, 0.1);
+  color: #4e5155;
+  float: left;
+  padding: 0 0.5rem;
+  border-radius: 0.125rem;
+  line-height: 1.5rem;
+  cursor: default;
+  margin-top: 0.375rem;
+  margin-right: 0.375rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select .select-input .checked-item .checked-item__remove,
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .w-checkbox-select .select-input .checked-item .checked-item__remove {
+  display: inline-block;
+  margin-right: 0.25rem;
+  color: inherit;
+  font-weight: 700;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select .select-dropdown,
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .w-checkbox-select .select-dropdown {
+  display: none;
+  position: relative;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  left: 0;
+  right: 0;
+  max-height: 12.5rem;
+  overflow-y: auto;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select .select-list,
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .w-checkbox-select .select-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select .select-item,
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .w-checkbox-select .select-item {
+  padding: 0.75rem;
+  cursor: pointer;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select .select-item input,
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .w-checkbox-select .select-item input {
+  margin-right: 0.5rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select .select-item.checked,
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .w-checkbox-select .select-item.checked {
+  background-color: rgba(24, 28, 33, 0.06);
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select .select-item:hover,
+.layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .w-checkbox-select .select-item:hover {
+  background-color: #775cdc !important;
+  color: #fff !important;
+  -webkit-transition: 0.15s background-color ease-in;
+  transition: 0.15s background-color ease-in;
+}
+
 .layout-wrapper .layout-inner .layout-container .layout-content .desc-editor {
   border: 1px solid #ccc;
 }
@@ -848,6 +967,153 @@ h4 {
   margin-bottom: 1rem;
   text-align: justify;
   white-space: pre-wrap;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .card-title.with-elements {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  width: 100%;
+  -ms-flex-align: center;
+  -webkit-box-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .contact-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .contact-content .contact-content-img {
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  margin: 0.125rem 1.25rem 0 0.25rem;
+  width: 4rem;
+  height: 4rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .card-title-elements {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-align: center;
+  -webkit-box-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .checkbox-select,
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .w-checkbox-select {
+  width: 100%;
+  position: relative;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .checkbox-select.open .select-input,
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .w-checkbox-select.open .select-input {
+  border-bottom: none;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .checkbox-select.open .select-dropdown,
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .w-checkbox-select.open .select-dropdown {
+  display: block;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .checkbox-select .select-input,
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .w-checkbox-select .select-input {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 2.5rem;
+  padding: 0.2rem 0.5rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .checkbox-select .select-input .checked-inline-options,
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .w-checkbox-select .select-input .checked-inline-options {
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  width: 100%;
+  list-style: none;
+  padding: 0 0.375rem 0.375rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .checkbox-select .select-input .checked-item,
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .w-checkbox-select .select-input .checked-item {
+  background-color: rgba(24, 28, 33, 0.1);
+  color: #4e5155;
+  float: left;
+  padding: 0 0.5rem;
+  border-radius: 0.125rem;
+  line-height: 1.5rem;
+  cursor: default;
+  margin-top: 0.375rem;
+  margin-right: 0.375rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .checkbox-select .select-input .checked-item .checked-item__remove,
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .w-checkbox-select .select-input .checked-item .checked-item__remove {
+  display: inline-block;
+  margin-right: 0.25rem;
+  color: inherit;
+  font-weight: 700;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .checkbox-select .select-dropdown,
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .w-checkbox-select .select-dropdown {
+  display: none;
+  position: relative;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  left: 0;
+  right: 0;
+  max-height: 12.5rem;
+  overflow-y: auto;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .checkbox-select .select-list,
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .w-checkbox-select .select-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .checkbox-select .select-item,
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .w-checkbox-select .select-item {
+  padding: 0.75rem;
+  cursor: pointer;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .checkbox-select .select-item input,
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .w-checkbox-select .select-item input {
+  margin-right: 0.5rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .checkbox-select .select-item.checked,
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .w-checkbox-select .select-item.checked {
+  background-color: rgba(24, 28, 33, 0.06);
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .checkbox-select .select-item:hover,
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .w-checkbox-select .select-item:hover {
+  background-color: #775cdc !important;
+  color: #fff !important;
+  -webkit-transition: 0.15s background-color ease-in;
+  transition: 0.15s background-color ease-in;
 }
 
 .layout-wrapper .layout-inner .layout-container .layout-content .cancel-order .form-group {
@@ -1174,6 +1440,13 @@ h4 {
   }
 }
 
+@media (min-width: 768px) {
+  .ml-md-auto,
+  .mx-md-auto {
+    margin-left: auto !important;
+  }
+}
+
 @media (max-width: 991px) {
   .login-form {
     width: 90%;
@@ -1296,6 +1569,9 @@ th {
   .dropdown-menu {
     font-size: 0.7rem;
     min-width: 8rem;
+  }
+  .modal .modal-body {
+    font-size: 0.7rem;
   }
 }
 /*# sourceMappingURL=index.css.map */
