--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -28,6 +28,9 @@ $click: #1e70cd;
 .sidebar_menu:focus {
   outline: none;
 }
+.modal .modal-body {
+  font-size: 0.894rem !important;
+}
 .toggle_menu {
   color: #000;
   background-color: transparent;
@@ -35,6 +38,13 @@ $click: #1e70cd;
 }
 .toggle_menu:hover {
   color: #9d9fa1;
+}
+.mr-2 {
+  margin-right: 0.5rem !important;
+}
+.mr-1,
+.mx-1 {
+  margin-right: 0.25rem !important;
 }
 .ps {
   position: relative;
@@ -551,6 +561,86 @@ h4 {
       //create order - Screens/Orders/CreateOrder.js
       .layout-content {
         width: 100%;
+        .create-order-section {
+          .checkbox-select,
+          .w-checkbox-select {
+            &.open {
+              .select-input {
+                border-bottom: none;
+              }
+              .select-dropdown {
+                display: block;
+              }
+            }
+            width: 100%;
+            position: relative;
+            .select-input {
+              cursor: pointer;
+              display: flex;
+              align-items: center;
+              min-height: 2.5rem;
+              padding: 0.2rem 0.5rem;
+              .checked-inline-options {
+                display: block;
+                box-sizing: border-box;
+                margin: 0;
+                width: 100%;
+                list-style: none;
+                padding: 0 0.375rem 0.375rem;
+              }
+              .checked-item {
+                background-color: rgba(24, 28, 33, 0.1);
+                color: #4e5155;
+                float: left;
+                padding: 0 0.5rem;
+                border-radius: 0.125rem;
+                line-height: 1.5rem;
+                cursor: default;
+                margin-top: 0.375rem;
+                margin-right: 0.375rem;
+                .checked-item__remove {
+                  display: inline-block;
+                  margin-right: 0.25rem;
+                  color: inherit;
+                  font-weight: 700;
+                  opacity: 0.5;
+                  cursor: pointer;
+                }
+              }
+            }
+            .select-dropdown {
+              display: none;
+              position: relative;
+              border: 1px solid #ced4da;
+              border-radius: 0.25rem;
+              left: 0;
+              right: 0;
+              max-height: 12.5rem;
+              overflow-y: auto;
+            }
+
+            .select-list {
+              padding: 0;
+              margin: 0;
+              list-style: none;
+            }
+            .select-item {
+              input {
+                margin-right: 0.5rem;
+              }
+              padding: 0.75rem;
+              cursor: pointer;
+              &.checked {
+                background-color: rgba(24, 28, 33, 0.06);
+              }
+              &:hover {
+                background-color: #775cdc !important;
+                color: #fff !important;
+                transition: 0.15s background-color ease-in;
+              }
+            }
+          }
+        }
         .desc-editor {
           border: 1px solid #ccc;
           textarea {
@@ -643,6 +733,113 @@ h4 {
             margin-bottom: 1rem;
             text-align: justify;
             white-space: pre-wrap;
+          }
+          .card-title.with-elements {
+            display: -ms-flexbox;
+            display: flex;
+            width: 100%;
+            -ms-flex-align: center;
+            align-items: center;
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+          }
+          .contact-content {
+            display: flex;
+            width: 100%;
+            .contact-content-img {
+              flex-grow: 0;
+              -ms-flex-negative: 0;
+              flex-shrink: 0;
+              margin: 0.125rem 1.25rem 0 0.25rem;
+              width: 4rem;
+              height: 4rem;
+            }
+          }
+          .card-title-elements {
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-align: center;
+            align-items: center;
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+          }
+          .checkbox-select,
+          .w-checkbox-select {
+            &.open {
+              .select-input {
+                border-bottom: none;
+              }
+              .select-dropdown {
+                display: block;
+              }
+            }
+            width: 100%;
+            position: relative;
+            .select-input {
+              cursor: pointer;
+              display: flex;
+              align-items: center;
+              min-height: 2.5rem;
+              padding: 0.2rem 0.5rem;
+              .checked-inline-options {
+                display: block;
+                box-sizing: border-box;
+                margin: 0;
+                width: 100%;
+                list-style: none;
+                padding: 0 0.375rem 0.375rem;
+              }
+              .checked-item {
+                background-color: rgba(24, 28, 33, 0.1);
+                color: #4e5155;
+                float: left;
+                padding: 0 0.5rem;
+                border-radius: 0.125rem;
+                line-height: 1.5rem;
+                cursor: default;
+                margin-top: 0.375rem;
+                margin-right: 0.375rem;
+                .checked-item__remove {
+                  display: inline-block;
+                  margin-right: 0.25rem;
+                  color: inherit;
+                  font-weight: 700;
+                  opacity: 0.5;
+                  cursor: pointer;
+                }
+              }
+            }
+            .select-dropdown {
+              display: none;
+              position: relative;
+              border: 1px solid #ced4da;
+              border-radius: 0.25rem;
+              left: 0;
+              right: 0;
+              max-height: 12.5rem;
+              overflow-y: auto;
+            }
+
+            .select-list {
+              padding: 0;
+              margin: 0;
+              list-style: none;
+            }
+            .select-item {
+              input {
+                margin-right: 0.5rem;
+              }
+              padding: 0.75rem;
+              cursor: pointer;
+              &.checked {
+                background-color: rgba(24, 28, 33, 0.06);
+              }
+              &:hover {
+                background-color: #775cdc !important;
+                color: #fff !important;
+                transition: 0.15s background-color ease-in;
+              }
+            }
           }
         }
         .cancel-order .form-group {
@@ -919,6 +1116,13 @@ h4 {
     text-align: right !important;
   }
 }
+@media (min-width: 768px) {
+  .ml-md-auto,
+  .mx-md-auto {
+    margin-left: auto !important;
+  }
+}
+
 @media (max-width: 991px) {
   .login-form {
     width: 90%;
@@ -1043,5 +1247,8 @@ h4 {
   .dropdown-menu {
     font-size: 0.7rem;
     min-width: 8rem;
+  }
+  .modal .modal-body {
+    font-size: 0.7rem;
   }
 }
