refactoring comming data and shimmer effect

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,6 +7,44 @@ body {
   font-size: 0.894rem;
 }
 
+.shine {
+  background: #e4e6eb;
+  background-image: -webkit-gradient(linear, left top, right top, from(#e4e6eb), color-stop(20%, #dbdde0), color-stop(40%, #e4e6eb), to(#e4e6eb));
+  background-image: linear-gradient(to right, #e4e6eb 0%, #dbdde0 20%, #e4e6eb 40%, #e4e6eb 100%);
+  background-repeat: no-repeat;
+  background-size: 800px 104px;
+  display: inline-block;
+  position: relative;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-name: placeholderShimmer;
+          animation-name: placeholderShimmer;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+}
+
+@-webkit-keyframes placeholderShimmer {
+  0% {
+    background-position: -468px 0;
+  }
+  100% {
+    background-position: 468px 0;
+  }
+}
+
+@keyframes placeholderShimmer {
+  0% {
+    background-position: -468px 0;
+  }
+  100% {
+    background-position: 468px 0;
+  }
+}
+
 .sidebar_menu {
   padding: 0.25rem 0.75rem;
   font-size: 1.25rem;
@@ -733,6 +771,42 @@ h4 {
 
 .layout-wrapper .layout-inner .layout-container .layout-content {
   width: 100%;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-list-section-shimmer .media .media-body {
+  width: 100%;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-list-section-shimmer .contact-content-about {
+  width: 100%;
+  margin-left: 0.5rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-list-section-shimmer .w-25 {
+  width: 25%;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-list-section-shimmer .w-100 {
+  width: 100%;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-list-section-shimmer .lines {
+  height: 1rem;
+  margin-top: 10px;
+  width: 50%;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-list-section-shimmer .box {
+  height: 70px;
+  width: 70px !important;
+  border-radius: 50% !important;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-list-section-shimmer .action-buttons {
+  display: block !important;
+  width: 100%;
+  height: 3rem;
+  margin-top: 15px;
 }
 
 .layout-wrapper .layout-inner .layout-container .layout-content .create-order-section .checkbox-select,
