--- a/src/css/index.css
+++ b/src/css/index.css
@@ -530,6 +530,20 @@ h4 {
   float: right !important;
 }
 
+.text-value {
+  width: 100%;
+  height: auto;
+}
+
+.marked-username {
+  margin-right: 0.5rem;
+  color: #187ed8;
+}
+
+[contenteditable] {
+  outline: none;
+}
+
 .icon {
   margin-right: 0.5rem;
 }
@@ -546,6 +560,11 @@ h4 {
 
 .ui-w-40 {
   width: 30px !important;
+  height: auto;
+}
+
+.ui-w-45 {
+  width: 40px !important;
   height: auto;
 }
 
@@ -1158,6 +1177,38 @@ h4 {
   font-size: 0.894rem;
 }
 
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .comments {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .comment-body {
+  width: 100%;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .comment-body .files-group {
+  padding: 0;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .under-comments button {
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background: transparent;
+  padding: 0;
+  margin-top: 0.5rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .under-comments button:focus {
+  outline: none;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .replies {
+  padding: 0 1rem 1rem 1rem;
+  margin-left: calc(0.5rem + 40px);
+}
+
 .layout-wrapper .layout-inner .layout-container .layout-content .order-section .media {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1165,13 +1216,6 @@ h4 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.layout-wrapper .layout-inner .layout-container .layout-content .order-section p {
-  margin-top: 0;
-  margin-bottom: 1rem;
-  text-align: justify;
-  white-space: pre-wrap;
 }
 
 .layout-wrapper .layout-inner .layout-container .layout-content .order-section .card-title.with-elements {
