--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -439,6 +439,17 @@ h4 {
   float: right !important;
 }
 ////
+.text-value {
+  width: 100%;
+  height: auto;
+}
+.marked-username {
+  margin-right: 0.5rem;
+  color: rgb(24, 126, 216);
+}
+[contenteditable] {
+  outline: none;
+}
 .icon {
   margin-right: 0.5rem;
 }
@@ -452,6 +463,10 @@ h4 {
 }
 .ui-w-40 {
   width: 30px !important;
+  height: auto;
+}
+.ui-w-45 {
+  width: 40px !important;
   height: auto;
 }
 .ui-w-50 {
@@ -906,15 +921,34 @@ h4 {
           }
         }
         .order-section {
+          .comments {
+            display: flex;
+          }
+          .comment-body {
+            width: 100%;
+            .files-group {
+              padding: 0;
+            }
+          }
+          .under-comments {
+            button {
+              border: none;
+              box-shadow: none;
+              background: transparent;
+              padding: 0;
+              margin-top: 0.5rem;
+            }
+            button:focus {
+              outline: none;
+            }
+          }
+          .replies {
+            padding: 0 1rem 1rem 1rem;
+            margin-left: calc(0.5rem + 40px);
+          }
           .media {
             display: flex;
             align-items: center;
-          }
-          p {
-            margin-top: 0;
-            margin-bottom: 1rem;
-            text-align: justify;
-            white-space: pre-wrap;
           }
           .card-title.with-elements {
             display: -ms-flexbox;
